--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,15 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #e9e9e9;
 }
-.logo {
-    width: 200px;
-    height: 100px;
-    margin: 20px auto;
+.logo img {
+    max-width: 1000px;
+    max-height: 500px;
+    height: auto;
+    width: auto;
+    text-align: center;
 }
+  
 .menu {
     list-style: none;
     padding: 0;
@@ -15,7 +18,7 @@ body {
     float: left;
 }
 .menu li {
-    background-color: #333;
+    background-color: rgb(218, 9, 33);
     color: white;
     padding: 10px;
     border-bottom: 1px solid #fff;
@@ -27,6 +30,7 @@ body {
     color: white;
     text-decoration: none;
     display: block;
+    font-weight: bold;
 }
 .content {
     margin-left: 220px;
